2007-12-13  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame -saveFoldersStateAction])
	([UIxMailMainFrame -getFoldersStateAction]): new methods to get
	and set the folders state of the user's web view.

2007-12-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -crashAction]): new
	action methods that generates a segmentation faults.
	([SOGoRootPage -exceptionAction]): new method that returns an
	exception object.
	([SOGoRootPage -raisedExceptionAction]): new method that raises an
	exception without returning it.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -responseWithStatus:status])
	([UIxComponent -responseWithStatus:statusandString:contentString])
	([UIxComponent -responseWithStatus:statusandJSONRepresentation:contentObject])
	([UIxComponent -responseWith204]): new utility methods.

	* UI/Common/WODirectAction+SOGo.m ([WODirectAction
	-responseWithStatus:statusandString:contentString])
	([WODirectAction
	-responseWithStatus:statusandJSONRepresentation:contentObject]):
	new utility methods.

	* SoObjects/SOGo/NSScanner+BSJSONAdditions.m ([NSScanner
	-scanJSONStringDelimiterString]): new category module taken from
	BSJSONAdditions 1.3.

	* SoObjects/SOGo/NSDictionary+BSJSONAdditions.[hm]: new category
	module taken from BSJSONAdditions 1.3.
	http://blakeseely.com/downloads.html

2007-12-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-stringByDetectingURLs]): we now go back until the real start of
	the found url.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-fetchAttachmentIds]): new method that wanders through the mail
	structure to collect the attachment content ids and to associate
	them with their url.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler
	-startElement:_localNamenamespace:_nsrawName:_rawNameattributes:_attributes]):